// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correct summary for +1 items 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $7.50
  </h1>
</div>
`;

exports[`should return correct summary for 1 item 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.50
  </h1>
</div>
`;
